# scarecrow-misa-ai-

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  ci.yml  ledger.py  metrics.py  pyproject.toml  requirements-dev.txt
.github/: dependabot.yml  release-drafter.yml
.github/workflows/: build.yml  ci.yml  codeql.yml  release-drafter.yml
examples/: compact_triage_demo.md  minimal_example.py
examples/ledgers/: sample_drc_chain.jsonl
experiments/2025-10-17-hotpath-triage/: README.md  conclusions.md  gemini_hotpath.md  gpt5_hotpath.md  grok_hotpath.md  results.csv
src/scarecrow_misa/: Init.py  __init__.py  __main__.py  ledger_read.py
tests/: test_ledger.py  test_metrics.py  test_sanity.py  test_smoke.py
