[project]
name = "scarecrow-misa"
version = "0.1.0"
description = "Scarecrow/MISA: covenant-aware stability & drift metrics for reasoning systems."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Brian Warren", email = "you@example.com" }]
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest","pytest-cov","mypy","ruff","build","twine"]

[tool.ruff]
line-length = 100
[tool.ruff.lint]
select = ["E","F","I","UP","B","SIM"]

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[build-system]
requires = ["setuptools>=68","wheel"]
build-backend = "setuptools.build_meta"