[project]
name = "scarecrow-misa"
version = "0.1.0"
description = "Scarecrow/MISA: covenant-aware stability & drift metrics for reasoning systems."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Brian Warren", email = chip964@outlook.com }]
requires-python = ">=3.10"
dependencies = []

[project.urls]
Homepage = "https://github.com/chip954/scarecrow-misa-ai-"
Repository = "https://github.com/chip954/scarecrow-misa-ai-"
Issues = "https://github.com/chip954/scarecrow-misa-ai-/issues"
Changelog = "https://github.com/chip954/scarecrow-misa-ai-/blob/main/CHANGELOG.md"

[project.classifiers]
"Development Status :: 3 - Alpha"
"Intended Audience :: Developers"
"License :: OSI Approved :: Apache Software License"
"Programming Language :: Python :: 3"
"Programming Language :: Python :: 3.10"
"Programming Language :: Python :: 3.11"
"Programming Language :: Python :: 3.12"
"Topic :: Scientific/Engineering :: Information Analysis"
"Topic :: Software Development :: Libraries"
"Typing :: Typed"

[project.scripts]
scarecrow-misa = "scarecrow_misa.__main__:main"

[project.optional-dependencies]
dev = ["pytest","pytest-cov","mypy","ruff","build","twine"]

[build-system]
requires = ["setuptools>=68","wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["scarecrow_misa*"]

[tool.ruff]
line-length = 100

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = ["E","F","I","UP","B","SIM"]

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
branch = true
source = ["src/scarecrow_misa"]

[tool.coverage.report]
skip_empty = true
fail_under = 80
